Fix searchbar and content height on safari browsers

--- a/restockninja/static/css/style.css
+++ b/restockninja/static/css/style.css
@@ -90,17 +90,25 @@ a {
         width: 100%;
         height: 50px;
     }
+
+    .searchbar input[type=text] {
+        font-size: 1rem;
+    }
+    
+    .searchbar button {
+        font-size: 1rem;
+    }
 }
 
 /* Content */
 .content {
-    padding: 50px 20px 0 20px;
-    min-height: calc(100vh - 150px);
+    padding: 50px 20px 20px 20px;
+    min-height: calc(100vh - 170px);
 }
 
 .container {
     max-width: 960px;
-    margin: 20px auto;
+    margin: 20px auto 0 auto;
 }
 
 .content-box {
